moved the text paragraph on the problem statement down so it's no longer on the photo.. was too hard to read. on main.scc file changed removed the padding so there's no gap between the search bar and the dropdown

--- a/app/scss/_typeography.scss
+++ b/app/scss/_typeography.scss
@@ -29,7 +29,7 @@ h5 {
   font-weight: bold;
   text-align: center;
   @media all and (max-width: 768px) {
-    font-size: .75rem;
+    font-size: 0.75rem;
   }
 }
 
